# sparkifydb_cdra

./: .gitignore  README.md  pyproject.toml
notebooks/: project.ipynb
tests/: test_sparkifydb_cdra.py
