[tool.poetry]
name = "sparkifydb_cdra"
version = "0.1.0"
description = ""
authors = ["K S <8283247+sunnykan@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
cassandra-driver = "^3.25.0"
numpy = "^1.21.2"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
mypy = "^0.910"
jupyterlab = "^3.2.0"
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
